--- a/Gestao_hoteis/nbproject/project.properties
+++ b/Gestao_hoteis/nbproject/project.properties
@@ -29,7 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.primefaces-12.0.0.jar=F:\\ISCIM\\Terceiro ano\\Primeiro Semestre\\Engenharia  de Software\\primefaces-12.0.0.jar
+file.reference.mysql-connector-java-8.0.22.jar=E:\\New folder\\escola\\Engenharia De Software\\mysql-connector-java-8.0.22.jar
+file.reference.primefaces-12.0.0.jar=E:\\New folder\\escola\\Engenharia De Software\\primefaces-12.0.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +45,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.primefaces-12.0.0.jar}
+    ${file.reference.primefaces-12.0.0.jar}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
